# Florence

./: .appveyor.yml  .clang-format  .gdb_history  .gitignore  .gitmodules  Florence.config  Florence.creator.user.1d36db2  Florence.creator.user.59486b4  Florence.cxxflags  Florence.files  Florence.includes  LICENSE  MakeUnityBuild.py  Makefile  README.md  build.zig  ccpp.yml  preamble.zig
ARMInator/: ARMInator.lds  Entry.asm  Uart.cpp
Bootsector/: Bootsector.S  Linker.lds  README.md
Bootstrapper/: Bootstrap.cpp  Bootstrap.hpp  BootstrapEntry.S  BootstrapHeader.S  Bootstrapper.S  Bootstrapper.cpp  Linker.lds  README.md
EFILoader/: Entry.cpp
Kernel/: ACPI.cpp  ACPI.hpp  APIC.cpp  APIC.hpp  Device.hpp  Disk.cpp  Disk.hpp  Display.cpp  Display.hpp  IO.hpp  Interrupts.S  Interrupts.S_  Interrupts.cpp  Interrupts.hpp  Kernel.S  Kernel.cpp  Kernel.lds  PCI.cpp  PCI.hpp  ap_boot.S  ubsan.cpp
KernelLoader/: KernelLoader.S  KernelLoader.cpp  Linker.lds
LibFlo/: ACPI.cpp  Algorithm.cpp  Function.cpp  LibFlo.cpp  Memory.cpp  Mutex.cpp  PCI.cpp  Paging.cpp  Random.cpp  RangeRandomizer.cpp  StrongTypedef.cpp  TypeTraits.cpp
LibKernel/: ACPI.cpp  LibKernel.cpp  Memory.cpp  PCI.cpp  ubsan.cpp
Stivale/: Stivale.asm  Stivale.cpp  Stivale.lds
Tests/: Algorithm.cpp  Assert.cpp  CMakeLists.txt  CMakeLists.txt.in  DynamicVector.cpp  Function.cpp  Multitasking.cpp  Mutex.cpp  Random.cpp  RangeRandomizer.cpp  SmallVector.cpp  Sorted.cpp  StaticVector.cpp  Testing.hpp  Unsorted.cpp  Util.cpp  VectorTests.hpp
assets/: assets.zig
buildutil/: buildutil.zig  exec.zig
(+335 files in other folders)
